[LCR-157] refactor: 정적 팩토리 메서드에 불필요한 파라미터 제거